--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <!-- Navbar Section -->
     <header class="navbar">
         <div class="logo">
             <h1><a href="index.html">Urban Hoodiez</a></h1>
+        </div>
+        <div class="logo-image">
+            <img src="file.png" alt="Urban Hoodiez Logo">
         </div>
         <nav class="nav-menu">
             <ul>
@@ -21,15 +23,39 @@
             </ul>
         </nav>
     </header>
-    <div id="intro">
-        <h1>Welcome to Urban Hoodiez</h1>
-        <p>Loading...</p>
-    </div>
-    <!-- Home Section -->
-    <div id="home">
-        <h1>Welcome to Urban Hoodiez</h1>
-        <p>Explore our exclusive collection!</p>
-    </div>
+    
+
+    <!-- Hero Section -->
+    <main>
+        <section class="hero">
+            <img src="file.png" alt="Urban Hoodiez Logo" class="logo">
+            <h1>See our new articles</h1>
+            <a href="products.html" class="button">Shop all</a>
+        </section>
+
+        <!-- Featured Products Section -->
+        <section class="featured-products">
+            <h2>Featured products</h2>
+            <div class="products">
+                <div class="product">
+                    <div class="product-image">
+                        <img src="black-hoodie-front.png" alt="Angel Urban Hoodie Black" class="front-image">
+                        <img src="black-hoodie-back.png" alt="Angel Urban Hoodie Black Back" class="back-image">
+                    </div>
+                    <p>Angel Urban Hoodie Black</p>
+                    <p>From 160.00 lei RON</p>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="white-hoodie-front.png" alt="Urban Hoodie Classic White" class="front-image">
+                        <img src="white-hoodie-back.png" alt="Urban Hoodie Classic White Back" class="back-image">
+                    </div>
+                    <p>Urban Hoodie Classic Hoodie White</p>
+                    <p>From 160.00 lei RON</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
