--- a/about.html
+++ b/about.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taskbar Example</title>
-  <link rel="stylesheet" href="about.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Urban Hoodiez</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">
-      <h1>Urban Hoodiez</h1>
-    </div>
-    <nav class="nav-menu">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Catalog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="nav-icons">
-      <a href="#"><img src="search-icon.png" alt="Search" class="icon"></a>
-      <a href="#"><img src="user-icon.png" alt="User" class="icon"></a>
-      <a href="#"><img src="cart-icon.png" alt="Cart" class="icon"></a>
-    </div>
-  </header>
+    <main>
+        <!-- Secțiunea Hero cu logo mare -->
+        <section class="hero">
+            <img src="file.png" alt="Urban Hoodiez Logo" class="logo">
+            <h1>See our new articles</h1>
+            <a href="#" class="button">Shop all</a>
+        </section>
+
+        <!-- Produse prezentate -->
+        <section class="featured-products">
+            <h2>Featured products</h2>
+            <div class="products">
+                <!-- Produs 1 -->
+                <div class="product">
+                    <div class="product-image">
+                        <img src="black-hoodie-front.png" alt="Angel Urban Hoodie Black" class="front-image">
+                        <img src="black-hoodie-back.png" alt="Angel Urban Hoodie Black Back" class="back-image">
+                    </div>
+                    <p>Angel Urban Hoodie Black</p>
+                    <p>From 160.00 lei RON</p>
+                </div>
+                <!-- Produs 2 -->
+                <div class="product">
+                    <div class="product-image">
+                        <img src="white-hoodie-front.png" alt="Urban Hoodie Classic White" class="front-image">
+                        <img src="white-hoodie-back.png" alt="Urban Hoodie Classic White Back" class="back-image">
+                    </div>
+                    <p>Urban Hoodie Classic Hoodie White</p>
+                    <p>From 160.00 lei RON</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
