--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
         <div class="logo">
             <h1><a href="index.html">Urban Hoodiez</a></h1>
         </div>
+        <div class="logo-image">
+            <img src="file.png" alt="Urban Hoodiez Logo">
+        </div>
         <nav class="nav-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
