--- a/products.html
+++ b/products.html
@@ -1,95 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Hoodiez - Products</title>
-    <link rel="stylesheet" href="products.css">
-</head>
-<body>
+    <link rel="stylesheet" href="products.css" />
+  </head>
+  <body>
     <!-- Navbar Section -->
     <header class="navbar">
-        <div class="logo">
-            <h1><a href="index.html">Urban Hoodiez</a></h1>
-        </div>
-        <nav class="nav-menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
+      <div class="logo">
+          <h1><a href="index.html">Urban Hoodiez</a></h1>
+      </div>
+      <div class="logo-image">
+          <img src="file.png" alt="Urban Hoodiez Logo">
+      </div>
+      <nav class="nav-menu">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </nav>
+  </header>
     <!-- Products Section -->
     <section id="products">
-        <h2>Our Products</h2>
-        <div class="product-grid">
-            <!-- Product 1 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="produs fata.jpg" alt="Product 1" class="default-img">
-                    <img src="produs spate.jpg" alt="Product 1 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 1</h3>
-                <p>$29.99</p>
+      <h2>Our Products</h2>
+      <div class="product-grid">
+        <!-- Product 1 -->
+        <a href="produs1.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="produs fata.jpg" alt="Product 1" class="default-img" />
+              <img
+                src="produs spate.jpg"
+                alt="Product 1 Hover"
+                class="hover-img"
+              />
             </div>
+            <h3>Product Name 1</h3>
+            <p>$29.99</p>
+          </div>
+        </a>
 
-            <!-- Product 2 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="product2.jpg" alt="Product 2" class="default-img">
-                    <img src="product2-hover.jpg" alt="Product 2 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 2</h3>
-                <p>$39.99</p>
+        <!-- Product 2 -->
+        <a href="produs2.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="product2.jpg" alt="Product 2" class="default-img" />
+              <img
+                src="product2-hover.jpg"
+                alt="Product 2 Hover"
+                class="hover-img"
+              />
             </div>
+            <h3>Product Name 2</h3>
+            <p>$39.99</p>
+          </div>
+        </a>
+        <!-- Product 3 -->
+        <a href="produs3.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="product3.jpg" alt="Product 3" class="default-img" />
+              <img
+                src="product3-hover.jpg"
+                alt="Product 3 Hover"
+                class="hover-img"
+              />
+            </div>
+            <h3>Product Name 3</h3>
+            <p>$49.99</p>
+          </div>
+        </a>
+        <!-- Product 4 -->
+        <a href="produs4.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="product4.jpg" alt="Product 4" class="default-img" />
+              <img
+                src="product4-hover.jpg"
+                alt="Product 4 Hover"
+                class="hover-img"
+              />
+            </div>
+            <h3>Product Name 4</h3>
+            <p>$59.99</p>
+          </div>
+        </a>
 
-            <!-- Product 3 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="product3.jpg" alt="Product 3" class="default-img">
-                    <img src="product3-hover.jpg" alt="Product 3 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 3</h3>
-                <p>$49.99</p>
+        <!-- Product 5 -->.
+        <a href="produs5.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="product5.jpg" alt="Product 5" class="default-img" />
+              <img
+                src="product5-hover.jpg"
+                alt="Product 5 Hover"
+                class="hover-img"
+              />
             </div>
+            <h3>Product Name 5</h3>
+            <p>$69.99</p>
+          </div>
+        </a>
 
-            <!-- Product 4 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="product4.jpg" alt="Product 4" class="default-img">
-                    <img src="product4-hover.jpg" alt="Product 4 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 4</h3>
-                <p>$59.99</p>
+        <!-- Product 6 -->
+        <a href="produs6.html">
+          <div class="product">
+            <div class="product-image">
+              <img src="product6.jpg" alt="Product 6" class="default-img" />
+              <img
+                src="product6-hover.jpg"
+                alt="Product 6 Hover"
+                class="hover-img"
+              />
             </div>
-
-            <!-- Product 5 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="product5.jpg" alt="Product 5" class="default-img">
-                    <img src="product5-hover.jpg" alt="Product 5 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 5</h3>
-                <p>$69.99</p>
-            </div>
-
-            <!-- Product 6 -->
-            <div class="product">
-                <div class="product-image">
-                    <img src="product6.jpg" alt="Product 6" class="default-img">
-                    <img src="product6-hover.jpg" alt="Product 6 Hover" class="hover-img">
-                </div>
-                <h3>Product Name 6</h3>
-                <p>$79.99</p>
-            </div>
-        </div>
+            <h3>Product Name 6</h3>
+            <p>$79.99</p>
+          </div>
+        </a>
+      </div>
     </section>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Urban Hoodiez. All rights reserved.</p>
+      <p>&copy; 2024 Urban Hoodiez. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
