--- a/produs6.html
+++ b/produs6.html
@@ -12,28 +12,59 @@
             background: linear-gradient(135deg, #4B0082, #800080);
         }
 
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: #2d0030;
-        }
+        .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 5%;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
 
-        header h1 {
-            font-size: 24px;
-        }
+.logo h1 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
 
-        nav {
-            display: flex;
-            gap: 20px;
-        }
+.logo h1 a {
+  text-decoration: none;
+  color: inherit;
+}
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-        }
+.logo h1 a:hover {
+  color: #ccc;
+}
+
+.logo-image {
+  margin: 0 20px;
+}
+
+.logo-image img {
+  height: 80px; /* Dimensiune mai mare pentru logo */
+  width: auto; /* Păstrează proporțiile imaginii */
+}
+
+
+.nav-menu ul {
+  display: flex;
+  list-style: none;
+}
+
+.nav-menu ul li {
+  margin: 0 15px;
+}
+
+.nav-menu ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #fff;
+  transition: color 0.3s;
+}
+
+.nav-menu ul li a:hover {
+  color: #ccc;
+}
 
         .container {
             display: flex;
@@ -137,12 +168,20 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Urban Hoodiez</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Contact</a>
+    <!-- Navbar Section -->
+    <header class="navbar">
+        <div class="logo">
+            <h1><a href="index.html">Urban Hoodiez</a></h1>
+        </div>
+        <div class="logo-image">
+            <img src="file.png" alt="Urban Hoodiez Logo">
+        </div>
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
