--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="cart.html" class="active">Cart</a></li>
             </ul>
         </nav>
     </header>
@@ -59,6 +60,7 @@
 
     <!-- Footer Section -->
     <footer>
+        <a href="cart.html">a</a>
         <p>&copy; 2024 Urban Hoodiez. All rights reserved.</p>
     </footer>
 </body>
