--- a/produs6.html
+++ b/produs6.html
@@ -181,6 +181,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="cart.html" class="active">Cart</a></li>
             </ul>
         </nav>
     </header>
